src/fhiclcpp/fhiclcpp/test/testFiles/pass/adv_ref5_pass.fcl
BEGIN_PROLOG
a :6
tab1: { a:1 b:2 }
END_PROLOG
a : 6
tab1.a : 7
