src/fhiclcpp/fhiclcpp/test/testFiles/fail/prolog2_fail.fcl
d : 1
BEGIN_PROLOG
a :1
b:2
END_PROLOG
